--- a/inventory/host_vars/romsto/vars.yml
+++ b/inventory/host_vars/romsto/vars.yml
@@ -21,3 +21,13 @@ prometheus_node_labels:
 
 prometheus_nextcloud_targets:
   - "{{ wireguard_ip }}:9205"
+
+data_disk:
+  dev: "/dev/disk/by-label/datassd01"
+  path: "/mnt/disks/datassd01"
+  script: "/boot/config/plugins/user.scripts/scripts/0-mount-datassd/script"
+persistent_disk:
+  dev: "/dev/disk/by-label/pstore"
+  path: "/pstore"
+swap_disk: "/dev/disk/by-uuid/eee1d5fb-be1e-4344-a1c7-9a3d3d990b53"
+ssd_mount_opts: "space_cache=v2,compress-force=zstd,relatime,ssd,discard=async"
