--- a/inventory/group_vars/ceph/keepalived.yml
+++ b/inventory/group_vars/ceph/keepalived.yml
@@ -16,7 +16,7 @@ keepalived_selinux_compile_rules: []
 keepalived_instances:
   nfs_general:
     interface: "GENERAL"
-    state: "{{ (keepalived_hosts.index(inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
+    state: "{{ (keepalived_hosts | ansible.utils.index_of('eq', inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
     virtual_router_id: 50
     priority: "{{ (inventory_hostname == keepalived_hosts[0]) | ternary('200', '100') }}"
     unicast_src_ip: "{{ host_ips.general }}"
@@ -29,7 +29,7 @@ keepalived_instances:
 
   nfs_san:
     interface: "SAN"
-    state: "{{ (keepalived_hosts.index(inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
+    state: "{{ (keepalived_hosts | ansible.utils.index_of('eq', inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
     virtual_router_id: 51
     priority: "{{ (inventory_hostname == keepalived_hosts[0]) | ternary('200', '100') }}"
     unicast_src_ip: "{{ host_ips.san }}"
@@ -42,7 +42,7 @@ keepalived_instances:
 
   nfs_vm:
     interface: "VM"
-    state: "{{ (keepalived_hosts.index(inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
+    state: "{{ (keepalived_hosts | ansible.utils.index_of('eq', inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
     virtual_router_id: 52
     priority: "{{ (inventory_hostname == keepalived_hosts[0]) | ternary('200', '100') }}"
     unicast_src_ip: "{{ host_ips.vm }}"
