--- a/inventory/host_vars/atla/vars.yml
+++ b/inventory/host_vars/atla/vars.yml
@@ -1,8 +1,10 @@
 ---
 
 swapfile_path: ""
-btrfs_nocow_paths: []
+btrfs_nocow_paths:
+  - "/var/lib/libvirt/images"
 btrfs_subvols:
   - "@snapshots"
+  - "@/var/lib/libvirt/images"
 
 ceph_mon: false
