--- a/inventory/host_vars/theia/btrfs.yml
+++ b/inventory/host_vars/theia/btrfs.yml
@@ -5,10 +5,8 @@ btrfs_root: "/mnt/btrfs_root"
 btrfs_opts: "compress=zstd:3,space_cache=v2"
 
 btrfs_subvols:
+  - "@snapshots"
   - "@/var/lib/libvirt/images"
-  - "@/srv/libvirt"
-  - "@/srv/kube"
 
 btrfs_nocow_paths:
   - "/var/lib/libvirt/images"
-  - "/srv/libvirt"
