--- a/inventory/host_vars/theia/btrbk.yml
+++ b/inventory/host_vars/theia/btrbk.yml
@@ -1,19 +1,10 @@
 ---
 
-btrbk_timestamp_format: "long"
-btrbk_snapshot_preserve_min: "latest"
-btrbk_snapshot_preserve: "2h 7d"
+btrbk_root_target: "/mnt/tank/backup/btrbk/{{ inventory_hostname }}"
 
-btrbk_volumes:
+btrbk_volumes_host:
   - path: "/mnt/btrfs_root"
-    options:
-      snapshot_dir: "@snapshots"
-      snapshot_preserve: "3h 3d 3w 1m"
-      target: "/mnt/tank/backup/btrbk/{{ inventory_hostname }}"
     subvolumes:
-      - path: "@"
-        options:
-          snapshot_name: "root"
       - path: "@home"
         options:
           snapshot_name: "home"
