Add back syncthing backups
Kinda silly, could consider running syncthing on Theia instead/in addition.

--- a/inventory/host_vars/theia/systemd/backup-gdrive.yml
+++ b/inventory/host_vars/theia/systemd/backup-gdrive.yml
@@ -54,4 +54,17 @@ __sd_backup_gdrive:
         latest_pg_full="$(find /mnt/tank/backup/pgbackrest/backup/main -maxdepth 1 -type d -name '*F' -exec basename {} \; | sort -rn | head -n1)"
         rclone sync -v --include "$latest_pg_full*/**" /mnt/tank/backup/pgbackrest/backup/main gsecret:pgbackrest
 
+        # Find latest {{ hostvars['docker01'].vm_host }} backup
+        latest_docker="$(find /mnt/tank/backup/btrbk/{{ hostvars['docker01'].vm_host }} -maxdepth 1 -type d -name 'libvirt*' | sort -rn | head -n1)"
+        if ! grep -q /tmp/docker01-data /proc/mounts && [ -f "$latest_docker"/docker01-data01.raw ]; then
+          trap 'umount /tmp/docker01-data' EXIT
+          mkdir -p /tmp/docker01-data
+          mount -o ro,noload,noatime "$latest_docker"/docker01-data01.raw /tmp/docker01-data
+          tmp_exit=$?
+          global_exit=$(( tmp_exit > global_exit ? tmp_exit : global_exit ))
+        fi
+        if [ -d /tmp/docker01-data/syncthing/data ]; then
+          rclone sync -v /tmp/docker01-data/syncthing/data gsecret:syncthing
+        fi
+
         exit $global_exit
