Remove swapfile from hypervisors
Replaced with partition on LVM for all of them.

--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -5,14 +5,11 @@ domain: "{{ domains['hb'] }}"
 btrfs_src: "LABEL=FEDORA-BTRFS"
 btrfs_root: "/mnt/btrfs_root"
 btrfs_opts: "compress=zstd:3,space_cache=v2"
-swapfile_path: "/.swap/swapfile"
-swapfile_size: "16GB"
+swapfile_path: ""
 btrfs_nocow_paths:
-  - "{{ swapfile_path | dirname }}"
   - "/var/lib/libvirt/images"
 btrfs_subvols:
   - "@snapshots"
-  - "@swap"
   - "@/var/lib/libvirt/images"
 
 btrfs_scrub_targets:
