--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -11,6 +11,7 @@ btrfs_nocow_paths:
 btrfs_subvols:
   - "@snapshots"
   - "@/var/lib/libvirt/images"
+  - "@home/{{ my_user }}"
 
 btrfs_scrub_targets:
   - /
