--- a/inventory/group_vars/prom/promtail.yml
+++ b/inventory/group_vars/prom/promtail.yml
@@ -2,7 +2,7 @@
 
 promtail_syslog_port: 1514
 
-__promtail_host_configs:
+__promtail_scrape_configs_2:
   - job_name: syslog
     syslog:
       listen_address: "127.0.0.1:{{ promtail_syslog_port }}"
