--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -2,6 +2,13 @@
 
 domain: "{{ domains['hb'] }}"
 
+fstrim_timer_enabled: true
+
+nvme_exporter_port: 9998
+nvme_exporter_listen_address: "{{ host_ips.vm }}:{{ nvme_exporter_port }}"
+
+prometheus_nvme_targets: ["{{ nvme_exporter_listen_address }}"]
+
 btrfs_src: "LABEL=FEDORA-BTRFS"
 btrfs_root: "/mnt/btrfs_root"
 btrfs_opts: "compress=zstd:3,space_cache=v2"
