--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -97,6 +97,14 @@
         mode: "0644"
       tags: ["nfs"]
 
+    - name: Create LVG
+      community.general.lvg:
+        vg: "localpv"
+        pvs: "/dev/disk/by-id/virtio-data01"
+        pesize: "32"
+        state: present
+      tags: ["lvm"]
+
 - name: Deploy charts and manifests
   hosts: kube_control_plane[0]
   gather_facts: false
@@ -112,6 +120,8 @@
         repo_url: "https://charts.jetstack.io"
       - name: cert-manager-webhook-hetzner
         repo_url: "https://vadimkim.github.io/cert-manager-webhook-hetzner"
+      - name: openebs-lvmlocalpv
+        repo_url: "https://openebs.github.io/lvm-localpv"
   pre_tasks:
     - name: Install Helm diff plugin
       delegate_to: localhost
@@ -148,6 +158,36 @@
           loop_control:
             label: "{{ item.name }}"
           tags: ["helm", "repos"]
+
+        - name: Install OpenEBS LVM CSI driver
+          kubernetes.core.helm:
+            name: lvm-localpv
+            chart_ref: openebs-lvmlocalpv/lvm-localpv
+            chart_version: "~1.2"
+            release_namespace: openebs
+            create_namespace: true
+            update_repo_cache: true
+            wait: true
+          tags: ["lvm"]
+
+        - name: Create LVM StorageClass
+          kubernetes.core.k8s:
+            state: present
+            resource_definition:
+              apiVersion: storage.k8s.io/v1
+              kind: StorageClass
+              metadata:
+                name: openebs-lvmpv
+              allowVolumeExpansion: true
+              provisioner: local.csi.openebs.io
+              parameters:
+                storage: "lvm"
+                volgroup: "localpv"
+                fsType: "ext4"
+              mountOptions:
+                - "defaults"
+                - "noatime"
+          tags: ["lvm"]
 
         # https://github.com/kubernetes/ingress-nginx/tree/main/charts/ingress-nginx
         - name: Deploy ingress-nginx chart
