Update certbot role
- FQCNs
- Add certbot_renew_pre_script

--- a/roles/certbot/defaults/main.yml
+++ b/roles/certbot/defaults/main.yml
@@ -18,6 +18,4 @@ certbot_renew_hooks: []
   #     #/bin/sh
   #     systemctl restart nginx
 
-__certbot_venv_update_pre: "{{ certbot_venv_path }}/bin/pip install --upgrade pip setuptools wheel"
-__certbot_venv_update: "{{ certbot_venv_path }}/bin/pip install --upgrade {{ (certbot_pkgs + certbot_extra_pkgs) | join(' ') }}"
-__certbot_renew: "{{ __certbot_bin_path }} renew -n"
+certbot_renew_pre_script: ""
