--- a/roles/certbot/tasks/FreeBSD.yml
+++ b/roles/certbot/tasks/FreeBSD.yml
@@ -1,13 +1,13 @@
 ---
 
 - name: Create crontab entry for certbot auto-update
-  cron:
+  ansible.builtin.cron:
     name: certbot auto-update
     special_time: monthly
     job: "{{ __certbot_venv_update_pre }} && {{ __certbot_venv_update }}"
 
 - name: Create crontab entry for certbot auto-renew
-  cron:
+  ansible.builtin.cron:
     name: certbot auto-renew
     minute: "0"
     hour: "*/12"
