--- a/roles/certbot/tasks/install.yml
+++ b/roles/certbot/tasks/install.yml
@@ -1,25 +1,27 @@
 ---
 
 - name: Debian tasks
+  when: ansible_os_family == 'Debian'
+  tags: ["install"]
   block:
     - name: Debian 10 tasks
+      when: ansible_distribution_major_version | int < 11
       block:
         - name: Set Python fact for 3.7
-          set_fact:
+          ansible.builtin.set_fact:
             __python_bin_path: /usr/bin/python3.7
 
         - name: Install prerequisites (Debian <=10)
-          apt:
+          ansible.builtin.apt:
             name:
               - python3
               - python3-venv
               - libaugeas0
             update_cache: true
             state: present
-      when: ansible_distribution_major_version | int < 11
 
     - name: Install prerequisites (Debian >=11)
-      apt:
+      ansible.builtin.apt:
         name:
           - python3.9
           - python3.9-venv
@@ -28,11 +30,8 @@
         state: present
       when: ansible_distribution_major_version | int >= 11
 
-  when: ansible_os_family == 'Debian'
-  tags: ["install"]
-
 - name: Install prerequisites (RedHat)
-  dnf:
+  ansible.builtin.dnf:
     name:
       - python39
       - augeas-libs
@@ -52,7 +51,7 @@
   tags: ["install"]
 
 - name: Setup venv  # noqa package-latest
-  pip:
+  ansible.builtin.pip:
     name:
       - pip
       - setuptools
@@ -65,7 +64,7 @@
 
 # 38 builds from source on Python 3.7
 - name: Install cryptography<38 (Debian 10)
-  pip:
+  ansible.builtin.pip:
     name: cryptography<38
     virtualenv: "{{ certbot_venv_path }}"
   when:
@@ -74,21 +73,21 @@
   tags: ["install"]
 
 - name: Install certbot
-  pip:
+  ansible.builtin.pip:
     name: "{{ certbot_pkgs + certbot_extra_pkgs }}"
     umask: "0077"
     virtualenv: "{{ certbot_venv_path }}"
   tags: ["install"]
 
 - name: Ensure bin link exists
-  file:
+  ansible.builtin.file:
     src: "{{ certbot_venv_path }}/bin/certbot"
     dest: "{{ __certbot_bin_path }}"
     state: link
   tags: ["install"]
 
 - name: Configure services if possible
-  include_tasks: "{{ item_file }}"
+  ansible.builtin.include_tasks: "{{ item_file }}"
   with_first_found:
     - files: ["{{ ansible_system }}.yml"]
       skip: true
@@ -99,6 +98,6 @@
 
 # Can be used to skip installing if including this role more than once
 - name: Set installed fact
-  set_fact:
+  ansible.builtin.set_fact:
     __certbot_installed: true
   tags: ["install"]
